# QtMiniProjects

./: LICENSE  README.md
Calculator/: README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
Calculator/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
FeedbackForm/: CMakeLists.txt  README.md  mainwindow.ui
FeedbackForm/src/: mainwindow.cpp  mainwindow.h
LoginForm/: CMakeLists.txt  README.md  mainwindow.ui  secondwindow.h  secondwindow.ui
LoginForm/src/: mainwindow.cpp  mainwindow.h  secondwindow.cpp
SayHello/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.ui
SayHello/src/: main.cpp  mainwindow.h
TextEditor/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
ToDoList/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  task.h
ToDoList/app/: tasks.db
ToDoList/src/: CMakeLists.txt  task.cpp
